katana/wui/core/static/core/css/main.css
/* ... */
.nav-inner {
	display: flex;
	width: 100%;
	position: absolute;
	height: 32px;
	white-space: nowrap;
	bottom: 0px;
	left: 0;
	/* box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.28); */
	/* border-top: 1px solid #dedede; */
	/* border-right: 1px solid #dedede; */
	overflow: hidden;
}
.field.required > label:before {
    content: '\00b7';
    font-size: 29px;
    position: absolute;
    top: 0;
    left: -8px;
    line-height: 22px;
    color: #dc3545;
}
.file-explorer-launcher {
    position: absolute;
    bottom: 5px;
    right: 0px;
    height: 37px;
    width: 40px;
    background: rgba(0, 0, 0, 0.1);
    text-align: center;
    line-height: 37px;
    font-size: 14px;
    color: #4ea4e0;
}

.file-explorer-launcher:before {
    content: "\f07c";
    font-family: FontAwesome;
}
.nav .tab:last-child {
	border-right: 1px solid #c1c1c1;
}
.tool-bar > .title {
    display: inline-block;
    width: auto;
    background: transparent;
    color: white;
    font-variant: small-caps;
    font-size: 18px;
		position: absolute;
		left: 0;
		top: 0;
		border-bottom: none;
}
.tab.active {
	background: rgb(255, 255, 255) !important;
	color: #5e5e5e;
	border-bottom: solid #1da1f2 2px;
}

.page-content .tab {
	/* width: 40%; */
	height: 0;
	padding-bottom: 12%;
	width: 12%;
	/* border: solid 1px white; */
	display: inline-block;
	vertical-align: top;
	margin: 2%;
	margin-bottom: 30px;
	position: relative;
	border-radius: 27px;
	color: #6b6b6b;
	background: rgba(255, 255, 255, 0.95);
	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
	-moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
	/* transition: all .1s ease; */
}

.page-content .tab>i {
	font-size: 4.5em;
	display: block;
	text-align: center;
	position: absolute;
	top: 50%;
	margin: 0 auto;
	left: 0;
	right: 0;
	transform: translateY(-50%);
}

.tab>span {
	text-align: center;
	display: block;
	text-align: center;
	position: absolute;
	margin: 0 auto;
	left: 0;
	right: 0;
	/* top: 0; */
	font-size: 1.1em;
	bottom: -31px;
	color: #ffffff;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.page-content .tabs {
	margin: 0 auto;
	/* display: inline-block; */
	max-width: 1400px;
	display: block;
	position: relative;
	padding: 30px 0;
}

.install-app-icons .tab {
	width: 5em;
	height: 5em;
}

.install-app-icons .tab>i {
	font-size: 2.5em;
}

.tab.red {
	color: #903c3c;
}

.tab.grey {
	color: #6b6b6b;
}

.tab.lightblue {
	color: #108c82;
}

.tab.tan {
	color: #987150;
}

.tab.yellow {
	color: #b0a658;
}

.tab.blue {
	color: #3b5f82;
}

.tab.orange {
	color: #853b19;
}

.tab.green {
	color: #3b7a4c;
}

.red {
	color: #903c3c;
}

.grey {
	color: #6b6b6b;
}

.tab.lightblue {
	color: #108c82;
}

.tab.skyblue {
    color: #4ea4e0;
}

.tab.lightgrey {
    color: #4ea4e0;
}

.tan {
	color: #987150;
}

.yellow {
	color: #b0a658;
}

.blue {
	color: #3b5f82;
}

.orange {
	color: #853b19;
}

.green {
	color: #3b7a4c;
}

.white {
	color: white;
}

.skyblue{
    color: #4ea4e0;
}

.lightgrey {
    color: #4ea4e0;
}

.lightblue {
    color: #108c82;
}

.page-content .tab:hover {
	opacity: .9;
	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.22);
}

.nav .tab i {
	position: absolute;
	right: 0px;
	top: 0;
	padding: 0 7px;
	height: 100%;
	font-size: 16px;
	line-height: 26px;
}

.tab {
	font-variant: small-caps;
}

.page-content-inner {
	background: rgb(255, 255, 255);
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	margin: 0;
	positive: relative;
}

.nav .tab[uid="launchpad"] {
	max-width: 35px;
	font-size: 0;
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
	-webkit-transition: max-width 0.2s ease, -webkit-transform 0.2s ease;
	transition: max-width 0.2s ease, transform 0.2s ease;
	text-overflow: initial;
}

.nav .tab.active[uid="launchpad"] {
	max-width: 200px;
	font-size: inherit;
	text-overflow: ellipsis;
}

.nav .tab.active[uid="launchpad"]:before {
	content: '';
}

.nav .tab[uid="launchpad"]:before {
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	content: "\f015";
	font-size: 17px;
	line-height: 28px;
}

.tooltip-on-right.align-fa-icon-after-label {}

.tooltip-on-right {
	/* display: none; */
	position: absolute;
	top: 9px;
	left: 9px;
	z-index: 1;
}

#launchpad .page-content {
	background: transparent;
	box-shadow: none;
	left: 0;
	width: 100%;
	/* top: 0; */
	/* height: 100%; */
	-webkit-box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.10);
	-moz-box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.10);
	box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.10);
}

.page.blue {
	background: #03a9f4;
}

.page-content-inner>.row {
	width: 100%;
}

input {
	width: 100%;
	padding: 10px;
	border: solid 1px #dcdcdc;
	font-family: inherit;
	color: #333;
	background: #f9f9f9;
	margin-top: 4px;
}

input:focus {
	background: #efefef;
}

input[type=radio] {
	width: 15px;
}

.field {
	padding: 5px 0;
	max-width: 800px;
	margin: 0 auto;
	position: relative;
}

.mandatory-field {
	color: rgb(214, 48, 48);
}

select {
	width: 100%;
	padding: 9px;
	border: solid 1px #dcdcdc;
	font-family: inherit;
	background: #f9f9f9;
}

.input-group {
	display: flex;
	margin-bottom: 20px;
}

.input-group>* {
	white-space: nowrap;
	/* max-height: 39px; */
}

span.input-group-addon>* {
	display: inline-block;
	width: 25px;
}

span.input-group-addon>label {
	width: 180px;
	font-size: 12px;
	/* overflow: hidden; */
	margin-right: 84px;
	padding-left: 0px;
	margin-bottom: 0;
	position: relative;
	line-height: 36px;
}

.modal.fade.ng-isolate-scope {
	display: none;
}

span.input-group-addon {
	line-height: 32px;
	position: relative;
	padding-left: 40px;
}
/* ... */

